# asset-flow

./: .editorconfig  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .swift-format  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.claude/: settings.json
AssetFlow/: AppDelegate.swift  AssetFlowApp.swift  CLAUDE.md  ContentView.swift  Info.plist  Item.swift
AssetFlow.xcodeproj/: project.pbxproj
AssetFlowTests/: AssetDetailViewModelTests.swift  AssetFlowTests.swift  AssetFormViewModelTests.swift  AssetIntegrationTests.swift  AssetListViewModelTests.swift  AssetManagementViewModelTests.swift  AuthenticationServiceTests.swift  BackupServiceCurrencyTests.swift  BackupServiceTests.swift  CLAUDE.md  CSVParsingCurrencyTests.swift  CSVParsingServiceTests.swift  CarryForwardServiceTests.swift  CashFlowOperationModelTests.swift  CategoryDetailViewModelCurrencyTests.swift  CategoryDetailViewModelTests.swift  CategoryListViewModelCurrencyTests.swift  CategoryListViewModelTests.swift  CategoryModelTests.swift  ChartDataServiceTests.swift  CurrencyConversionServiceTests.swift  DashboardViewModelTests.swift  DateFormattingTests.swift  EmptyStateTests.swift  ExchangeRateModelTests.swift  ExchangeRateServiceTests.swift  GoalProgressCalculationTests.swift  ImportViewModelTests.swift  NavigationIntegrationTests.swift  PlatformDetailViewModelCurrencyTests.swift  PlatformDetailViewModelTests.swift  PlatformListViewModelTests.swift  PortfolioDetailViewModelTests.swift  (+22 more)
dev/: 404.html  (+2 more)
(+393 files in other folders)
