[project]
name = "assetflow-dev"
version = "0.0.0"
description = "Development tools for AssetFlow"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
docs = [
    "mike>=2.1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-static-i18n>=1.3.1",
]
